inicio-prod-nav fix

--- a/package.json
+++ b/package.json
@@ -7,5 +7,13 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "<h1 align=\"center\">Hi 👋, I'm Mauro</h1> <h3 align=\"center\">A passionate frontend developer from Argentina!</h3>",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mbello89/unvagondeideas.git"
+  },
+  "bugs": {
+    "url": "https://github.com/mbello89/unvagondeideas/issues"
+  },
+  "homepage": "https://github.com/mbello89/unvagondeideas#readme"
 }
